--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,115 @@
-body {
-    background-image: url("./background.svg");
+@font-face {
+    font-family: "Akidenz";
+    src: url("./data/Akzidenz-grotesk-roman.ttf");
 }
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    padding: 20px;
+    font-family: "Akidenz";
+}
+
+/* Center website */
+.main {
+    max-width: 1000px;
+    margin: auto;
+}
+
+
+h1 {
+    text-transform: lowercase;
+    font-size: 2rem;
+    word-break: break-all;
+}
+
+p {
+    margin-left: 50%;
+    margin-top: -7.5%;
+    font-size: 1rem;
+    line-height: .1vh;
+}
+
+#myBtnContainer {
+    margin-left: 40%;
+    margin-top: -4%;
+}
+
+.subtitle {
+    margin-top: 0%;
+    text-transform: uppercase;
+    font-size: .75rem;
+    color: #666;
+}
+
+.row {
+    margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row,
+.row > .column {
+    padding: 20px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    display: none; /* Hide columns by default */
+}
+
+/* Clear floats after rows */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+    display: block;
+}
+
+/* Style the buttons */
+.btn {
+    text-transform: uppercase;
+    outline: none;
+    padding: 12px 16px;
+    background-color: white;
+    cursor: pointer;
+    border: .5px dashed;
+}
+
+/* Add a grey background color on mouse-over */
+.btn:hover {
+    background-color: red;
+}
+
+header {
+    position: fixed;
+    margin-bottom: 10%;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  a:visited {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  a:hover {
+    transform: translateY(4px);
+    transition-duration: .25s;
+  }
