--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*** OVERALL RULES ***/
+
 @font-face {
     font-family: "Akidenz";
     src: url("./data/Akzidenz-grotesk-roman.ttf");
@@ -8,51 +10,55 @@
 }
 
 body {
-    padding: 20px;
+    padding: 1.5%;
     font-family: "Akidenz";
 }
 
 /* Center website */
 .main {
-    max-width: 1000px;
+    max-width: 100%;
     margin: auto;
 }
 
 
 h1 {
     text-transform: lowercase;
-    font-size: 2rem;
+    font-size: 2.5vw;
     word-break: break-all;
 }
 
 p {
     margin-left: 50%;
     margin-top: -7.5%;
-    font-size: 1rem;
+    font-size: 1.25vw;
     line-height: .1vh;
-}
-
-#myBtnContainer {
-    margin-left: 40%;
-    margin-top: -4.5%;
 }
 
 .subtitle {
     margin-top: 0%;
     text-transform: uppercase;
-    font-size: .75rem;
+    font-size: 1vw;
     color: #666;
 }
 
+/* Content */
+.content {
+    background-color: white;
+    padding: 5%;
+}
+
+
+/*** LAYOUT GRID ***/
+
 .row {
-    margin: 8px -16px;
-    margin-top: -7.5%;
+    margin: 2% -4%;
+    margin-top: -10%;
 }
 
 /* Add padding BETWEEN each column (if you want) */
 .row,
 .row > .column {
-    padding: 20px;
+    padding: 2%;
 }
 
 /* Create three equal columns that floats next to each other */
@@ -69,39 +75,19 @@ p {
     clear: both;
 }
 
-/* Content */
-.content {
-    background-color: white;
-    padding: 10px;
-}
-
 /* The "show" class is added to the filtered elements */
 .show {
     display: block;
 }
 
-/* Style the buttons */
-.btn {
-    text-transform: uppercase;
-    outline: none;
-    padding: 12px 16px;
-    background-color: white;
-    cursor: pointer;
-    border: .5px dashed;
-}
 
-/* Add a grey background color on mouse-over */
-.btn:hover {
-    background-color: grey;
-    color: grey;
-    transition-duration: .25s;
-}
+/*** HEADER ***/
 
 header {
     width: 100%;
     position: fixed;
     background: white;
-    padding: 15px 0;
+    padding: 1.5% 0;
     font-weight: bolder;
     top: 0;
 }
@@ -117,6 +103,30 @@ a:visited {
     color: #333;
   }
   
+
+
+/*** BUTTONS ***/
+.btn {
+    text-transform: uppercase;
+    outline: none;
+    padding: 1.5% 2%;
+    background-color: white;
+    cursor: pointer;
+    border: .05rem dashed;
+}
+
+/* Add a grey background color on mouse-over */
+.btn:hover {
+    background-color: grey;
+    color: grey;
+    transition-duration: .25s;
+}
+
+#myBtnContainer {
+    margin-left: 40%;
+    margin-top: -4.5%;
+}
+
 /* BUTTON Colors*/
 
 #btn__blue:hover {
